Controllers, Update User entity, front update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,16 @@
 server.port = 20000
 
-hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-hibernate.show.sql=true
-hibernate.hbm2ddl.auto=update
+hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+hibernate.show.sql = true
+hibernate.hbm2ddl.auto = update
 
 entity.manager.packages.to.scan= com.webapp.web.domain
 
 c3p0.config.path = config/c3p0-config.xml
 
+logging.pattern.console = [%d{dd-MM-yyyy HH:mm:ss}] - %msg%n
+logging.pattern.file    = [%d{dd-MM-yyyy HH:mm:ss}] [%thread] [%-5level] - %msg%n
+logging.file            = log/web_app.log
 
-
+logging.level.org.hibernate = INFO
+logging.level.org.springframework = INFO
